chamber/styles/base.css
/*universal reset; hard code reset override margin, padding. border-box define as contstrained to size of initial border defined by container
as long as not in-line element, when add padding do not let expand beyond box:
*{
  margin: 0
padding: 0
box-sizing: border-box} 

makes global available and possible to change any var etc.   on entire site
:root {
  --main-blue: #3d3d3d;
  --main-orange:
  --main-title-font: "Playfair", Sans-serif;
  --main-text-font: "Roboto", Sans-serif;
}*/

body {
  .raleway {
    font-family: "Raleway", sans-serif;
    /*font-optical-sizing: auto;*/
    font-weight: 400;
    font-style: normal;
  }

  .roboto-regular {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
  }
}

header,
footer {
  text-align: center;
  background-color: #02364F;
  color: #F5F5F5;
  padding: .5rem;
}

#mode {

  float: right;
  top: 1rem;
  right: 1rem;
  font-size: 3rem;
  cursor: pointer;
  font-size: 2rem;
}

#menu {
  display: block;
  text-decoration: none;
}

#menu::before {
  content: url("../images/hamburger.svg");
}

nav {
  border: 1px solid #3d3d3d;
}

.navigation {
  list-style: none;
  margin: 0 auto;
  max-width: 760px;
}

.navigation li {
  display: none;

}

.navigation a {
  display: block;
  text-align: left;
  text-decoration: none;
  color: #f5f5f5;
}

.navigation a:hover,
.navigation a:active {
  background-color: #fb8500;
  color: #02364F;
}

.show li {
  display: block;
}

#menu.show::before {
  content: url("../images/closex.svg");
}

.left-sidebar {
  margin: 0;
  padding: 1rem;
  border: 1px solid #3d3d3d;
}

.right-sidebar {
  margin: 0;
  padding: 1rem;
  border: 1px solid #3d3d3d;
}

section {
  margin: 0;
  padding: 1rem;
  border: 1px solid #3d3d3d;
}

/*.responsiveimg {
  margin: 10px auto;
  position: relative;
}*/

.responsiveimg img {
  width: 100%;
  height: auto;
}

.smalllabel {
  position: absolute;
  top: 30vw;
  left: 45vw;
  background: radial-gradient(#fff, rgb(244, 249, 251));
  border: 5px solid #3d3d3d;
  padding: .5rem;
  opacity: 0.75;
  font-size: 2rem;
}

.smalllabel p {
  margin: 0;
  padding: .25rem;
  font-weight: 600;
}

/* ----------DISCOVER PAGE----------*/
.discover-main {
  grid-area: main;
}

.discover-aside {
  grid-area: sidebar;
  min-width: 0;
}

.wrapper {
  display: grid;
  gap: 10px;
  grid-template-areas:
    "main"
    "sidebar";
}

.discover-main img {
  width: 100%;
  height: auto;
}

/*.agenda-calendar {
  width: 100%;
  height: auto;
}*/

.month-calendar {
  display: none;
}

.discover-aside img {
  width: 100%;
  height: auto;
}

.discover-aside h1,
h2 {
  text-align: center;
}

.visit-date {
  font-family: "Roboto";
  text-align: center;
  font-size: xx-large;
}

figure {
  border: thin #c0c0c0 solid;
  display: flex;
  flex-flow: column;
  padding: 5px;
  margin: auto;
}

figcaption {
  background-color: #3d3d3d;
  color: #F5F5F5;
  font: italic smaller sans-serif;
  padding: 3px;
  text-align: center;
}

